syntax = "proto3";

package api.post;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "linkme-post/api/post;post";

service Post {
	rpc CreatePost (CreatePostRequest) returns (CreatePostReply) {
		option (google.api.http) = {
			post: "/create"
			body: "*"
		};
	}
	rpc UpdatePost (UpdatePostRequest) returns (UpdatePostReply) {
		option (google.api.http) = {
			post: "/update"
			body: "*"
		};
	}
	rpc DeletePost (DeletePostRequest) returns (DeletePostReply) {
		option (google.api.http) = {
			delete: "/delete/{postId}"
		};
	}
	rpc PublishPost (PublishPostRequest) returns (PublishPostReply) {
		option (google.api.http) = {
			post: "/publish"
			body: "*"
		};
	}
	rpc WithdrawPost (WithdrawPostRequest) returns (WithdrawPostReply) {
		option (google.api.http) = {
			post: "/withdraw"
			body: "*"
		};
	}
	rpc ListPost (ListPostRequest) returns (ListPostReply) {
		option (google.api.http) = {
			post: "/list"
			body: "*"
		};
	}
	rpc ListPubPost (ListPubPostRequest) returns (ListPubPostReply) {
		option (google.api.http) = {
			post: "/list_pub"
			body: "*"
		};
	}
	rpc ListAdminPost (ListAdminPostRequest) returns (ListAdminPostReply) {
		option (google.api.http) = {
			post: "/list_admin"
			body: "*"
		};
	}
	rpc DetailPost (DetailPostRequest) returns (DetailPostReply) {
		option (google.api.http) = {
			get: "/detail/{postId}"
		};
	}
	rpc DetailPubPost (DetailPubPostRequest) returns (DetailPubPostReply) {
		option (google.api.http) = {
			get: "/detail_pub/{postId}"
		};
	}
	rpc DetailAdminPost (DetailAdminPostRequest) returns (DetailAdminPostReply) {
		option (google.api.http) = {
			get: "/detail_admin/{postId}"
		};
	}
	rpc GetPostStats (google.protobuf.Empty) returns (GetPostStatsReply) {
		option (google.api.http) = {
			get: "/stats"
		};
	}
	rpc LikePost (LikePostRequest) returns (LikePostReply) {
		option (google.api.http) = {
			post: "/like"
			body: "*"
		};
	}
	rpc CollectPost (CollectPostRequest) returns (CollectPostReply) {
		option (google.api.http) = {
			post: "/collect"
			body: "*"
		};
	}
}

message CreatePostRequest {
	int64 postId = 1;
	string title = 2;
	string content = 3;
	int64 plateId = 4;
}

message CreatePostReply {
	int32 code = 1;
	string msg = 2;
	int64 data = 3;
}

message UpdatePostRequest {
	int64 postId = 1;
	string title = 2;
	string content = 3;
	int64 plateId = 4;
}

message UpdatePostReply {
	int32 code = 1;
	string msg = 2;
}

message DeletePostRequest {
	int64 postId = 1;
}

message DeletePostReply {
	int32 code = 1;
	string msg = 2;
}

message ListPostRequest {
	int32 page = 1;
	int64 size = 2;
}

message ListPostReply {
	int32 code = 1;
	string msg = 2;
	repeated ListPost data = 3;
}

message PublishPostRequest {
	int64 postId = 1;
}

message PublishPostReply {
	int32 code = 1;
	string msg = 2;
}

message WithdrawPostRequest {
	int64 postId = 1;
}

message WithdrawPostReply {
	int32 code = 1;
	string msg = 2;
}

message ListPubPostRequest {
	int32 page = 1;
	int64 size = 2;
}

message ListPubPostReply {
	int32 code = 1;
	string msg = 2;
	repeated ListPost data = 3;
}

message ListAdminPostRequest {
	int32 page = 1;
	int64 size = 2;
}

message ListAdminPostReply {
	int32 code = 1;
	string msg = 2;
	repeated ListPost data = 3;
}

message DetailPostRequest {
	int64 postId = 1;
}

message DetailPostReply {
	int32 code = 1;
	string msg = 2;
	DetailPost data = 3;
}

message DetailPubPostRequest {
	int64 postId = 1;
}

message DetailPubPostReply {
	int32 code = 1;
	string msg = 2;
	DetailPost data = 3;
}

message DetailAdminPostRequest {
	int64 postId = 1;
}

message DetailAdminPostReply {
	int32 code = 1;
	string msg = 2;
	DetailPost data = 3;
}

message GetPostStatsReply {
	int32 code = 1;
	string msg = 2;
	int64 count = 3;
}

message LikePostRequest {
	int64 postId = 1;
	bool liked = 2;
}

message LikePostReply {
	int32 code = 1;
	string msg = 2;
}

message CollectPostRequest {
	int64 postId = 1;
	int64 collectId = 2;
	bool collectd = 3;
}

message CollectPostReply {
	int32 code = 1;
	string msg = 2;
}

message ListPost {
	int64 id = 1;
	string title = 2;
	string content = 3;
	int64 createdAt = 4;
	int64 updatedAt = 5;
	int64 userId = 6;
	int64 plateId = 7;
}

message DetailPost {
	int64 id = 1;
	string title = 2;
	string content = 3;
	int64 createdAt = 4;
	int64 updatedAt = 5;
	int64 userId = 6;
	int64 plateId = 7;
	int64 likeCount = 8;
	int64 collectCount = 9;
	int64 viewCount = 10;
}